# cfca-hazard-extraction

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  Dockerfile  justfile  pyproject.toml  railway.json  requirements.txt
artifacts/: summary.json
artifacts/comments/gepa/: program.pkl
artifacts/eventDate/gepa/: program.pkl
artifacts/eventTime/gepa/: program.pkl
artifacts/homeAddress/gepa/: program.pkl
artifacts/location/gepa/: program.pkl
artifacts/smellType/gepa/: program.pkl
artifacts/smokeColor/gepa/: program.pkl
artifacts_gemini/: summary.json
artifacts_gemini/burningMaterial/gepa/: program.pkl
artifacts_gemini/comments/gepa/: program.pkl
artifacts_gemini/eventDate/gepa/: program.pkl
artifacts_gemini/eventEnded/gepa/: program.pkl
artifacts_gemini/eventTime/gepa/: program.pkl
artifacts_gemini/homeAddress/gepa/: program.pkl
artifacts_gemini/location/gepa/: program.pkl
artifacts_gemini/reportType/gepa/: program.pkl
artifacts_gemini/reporterLocation/gepa/: program.pkl
artifacts_gemini/reporterName/gepa/: program.pkl
artifacts_gemini/smellIntensity/gepa/: program.pkl
artifacts_gemini/smellType/gepa/: metadata.json  program.pkl
data/: start_messages.xlsx  test_set.xlsx
docs/: install_results.md
scripts/: setup_init.py  setup_maintenance.py
src/: __init__.py  optimizer.py
src/optimization/: config.py  constants.py  data.py  main.py  metrics.py  optimizer.py  schema.py  signatures.py
src/service/: __init__.py  artifact_loader.py  extraction_service.py  model_selector.py  server.py
(+9 files in other folders)
