[project]
name = "cfca-prompt-optimizations"
version = "0.1.0"
description = "DSPy-based LLM extraction optimization service"
requires-python = ">=3.13"
dependencies = [
    "dspy==3.0.4",
    "loguru==0.7.3",
    "pandas==2.3.3",
    "openpyxl==3.1.5",
    "pydantic==2.12.5",
    "fastapi==0.115.5",
    "uvicorn==0.30.6",
    "starlette==0.41.3",
    "gunicorn==23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
